--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>ntc-configuration</artifactId>
             <version>1.0.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+        
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
